--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12">test</div>
+            <div class="col-12">
+                <div class="test"></div>
+                <div class="test2"></div>
+                <div class="test3"></div>
+                <div class="test4"></div></div>
+            </div>
         </div>
     </div>
 </body>
